# 5400finalproject

./: .gitignore  README.md  Untitled Diagram.drawio  pyproject.toml  test.ipynb
.history/project_new/: README_20241217213529.md  README_20241217214137.md  README_20241217214548.md
5400 project/: aggregated_daily_sentiment_scores.py  aligned_stock_prices_sentiment.py  financial_company_data.py  financial_news_with_vader_and_finbert_sentiment_scores.py  healthcare_company_data.py  historical_stock_prices.py  model_accuracy.py  tech_company_data.py  test.ipynb  visualize_evaluate.ipynb
5400 project/.history/: aggregated_daily_sentiment_scores_20241120173924.py  aggregated_daily_sentiment_scores_20241120174141.py  aggregated_daily_sentiment_scores_20241120212344.py  aggregated_daily_sentiment_scores_20241120213859.py  aligned_stock_prices_sentiment_imputed_20241120164121.py  feature_engineering_20241120213540.py  feature_engineering_20241120221026.py  feature_engineering_20241120231223.py  final_merged_sentiment_stock_prices_20241119133050.py  final_merged_sentiment_stock_prices_20241119143552.py  financial_company_data_20241118083331.py  financial_company_data_20241118123720.py  financial_news_with_sentiment_labels_20241120164355.py  financial_news_with_vader_and_finbert_sentiment_scores_20241120171835.py  financial_news_with_vader_and_finbert_sentiment_scores_20241120213540.py  financial_news_with_vader_sentiment_20241119144730.py  (+28 more)
project_new/: environment.yml  pyproject.toml
project_packaged/: pipeline.py  requirement.txt  setup.py
(+45 files in other folders)
