[tool.poetry]
name = "\"5400-project\""
version = "\"0.1.0\""
description = "\"sentiment analysis on financial news\""
authors = ["Your Name <you@example.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
matplotlib = "^3.4.3"
nltk = "^3.6.5"
pytest = "^7.0.0"
logging = "^0.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
